@@ -50,6 +50,7 @@ CPPFLAGS=	-I@abs_srcdir@/include
 CFLAGS=		@CFLAGS@
 LDFLAGS=	@LDFLAGS@
 
+HAS_X=		@HAS_X@
 XCPPFLAGS=	@XCPPFLAGS@
 XLDFLAGS=	@XLDFLAGS@
 
@@ -68,7 +69,7 @@ LIBS=		$(LIB_H2_UNIX) $(OS_LIBS)
 
 MKINSTALLDIRS=	$(abs_srcdir)/mkinstalldirs
 
-RPCGEN=		rpcgen
+RPCGEN=		@RPCGEN@
 
 LN=		ln -s
 
