@@ -1,4 +1,8 @@
 
+6. Effectively handle the possibility to disable X11 (xes).
+5. Look for rpcgen instead of blindly using `rpcgen' (useful for
+   cross-compiling).
+
 Version 2.0, xx september 2003
 
 4. Install include files (Anthony Mallet).
